Refactoring and exception handling